// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should MovieReview render correctly should render correctly with 1 comment 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  <div
    className="movie-card__reviews-col"
  >
    <div
      className="review"
    >
      <blockquote
        className="review__quote"
      >
        <p
          className="review__text"
        >
          Test string
        </p>
        <footer
          className="review__details"
        >
          <cite
            className="review__author"
          >
            Test
          </cite>
          <time
            className="review__date"
            dateTime={2020-06-21T10:54:44.818Z}
          >
            June 21, 2020
          </time>
        </footer>
      </blockquote>
      <div
        className="review__rating"
      >
        5.2
      </div>
    </div>
  </div>
  <div
    className="movie-card__reviews-col"
  />
</div>
`;

exports[`Should MovieReview render correctly should render correctly with 2 comments 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  <div
    className="movie-card__reviews-col"
  >
    <div
      className="review"
    >
      <blockquote
        className="review__quote"
      >
        <p
          className="review__text"
        >
          Test string
        </p>
        <footer
          className="review__details"
        >
          <cite
            className="review__author"
          >
            Test
          </cite>
          <time
            className="review__date"
            dateTime={2020-06-21T10:54:44.818Z}
          >
            June 21, 2020
          </time>
        </footer>
      </blockquote>
      <div
        className="review__rating"
      >
        5.2
      </div>
    </div>
  </div>
  <div
    className="movie-card__reviews-col"
  >
    <div
      className="review"
    >
      <blockquote
        className="review__quote"
      >
        <p
          className="review__text"
        >
          Test string 2
        </p>
        <footer
          className="review__details"
        >
          <cite
            className="review__author"
          >
            Test2
          </cite>
          <time
            className="review__date"
            dateTime={2020-05-11T10:54:44.818Z}
          >
            May 11, 2020
          </time>
        </footer>
      </blockquote>
      <div
        className="review__rating"
      >
        8
      </div>
    </div>
  </div>
</div>
`;
